# auto_hdr_submission

./: .gitignore  Dockerfile  README.md  _g.txt  algorithm_slideshow.html  analyze_failures.py  analyze_missed.py  analyze_outliers.py  analyze_outliers2.py  anomaly_features.json  anomaly_section.py  audit_all_cases.py  audit_cases.py  audit_montage.py  audit_regressions.py  bench_large.py  bench_transforms.py  borderline_gallery.html  build_disagreement_report.py  build_feat.py  build_imgcache.py  build_imgcache_color.py  build_raw256.py  build_unfixable_report.py  check_groups.py  classify_missed.py  coherence_detect.py  community.py  count_disagreements.py  cross_size.py  cross_size2.py  deploy_eval.py  descriptor.py  dump_autohdr_labels.py  dump_cached.py  dump_cached_chunked.py  dup_check.html  eval_cached.py  eval_fusion.py  eval_fusion3.py  (+91 more)
autohdr/: __init__.py  clustering.py  grouper.py  image_loader.py
autohdr/features/: __init__.py  chroma.py  extreme_anchor.py  gradient_descriptor.py  masked_correlation.py  wavelet_embedding.py
autohdr/refinement/: __init__.py  anchor_reattachment.py  anchor_splitter.py  capture_run_splitter.py  clipped_foreign_splitter.py  clipped_reattachment.py  cluster_merging.py  color_merge.py  context.py  contiguity_reattachment.py  drift_reattachment.py  highres_splitter.py  light_mismatch_splitter.py  motion_splitter.py  orphan_reattachment.py  scene_change_splitter.py  seed_scene_splitter.py  well_orphan_reattachment.py
data/full_subset/: model_failures.json
data/large/: unfixable.json
(+2 files in other folders)
