[project]
name = "auto-hdr-submission"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "leidenalg>=0.12.0",
    "numpy>=2.4.6",
    "onnx>=1.22.0",
    "onnxruntime>=1.27.0",
    "onnxscript>=0.7.0",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "python-igraph>=1.0.0",
    "pywavelets>=1.9.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
